--- a/src/componentes/Central/Central.css
+++ b/src/componentes/Central/Central.css
@@ -1,3 +1,16 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+.font-family-poppins{
+    font-family: 'Poppins';
+}
+
 .bg-primary {
     background-color: #598AD5 !important;
+}
+
+.font-sizeh1{
+    font-size: 50px !important;
 }
