--- a/src/componentes/Central/Central.css
+++ b/src/componentes/Central/Central.css
@@ -7,8 +7,8 @@
     font-family: 'Poppins';
 }
 
-.bg-primary {
-    background-color: #598AD5 !important;
+.bg-primary1 {
+    background-color: #598bd5 !important;
 }
 
 .font-sizeh1{
